--- a/QB Data Project/python/qb_data.ipynb
+++ b/QB Data Project/python/qb_data.ipynb
@@ -1,10 +1,30 @@
 {
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# ****DISCLAIMER****\n",
+    "\n",
+    "This dataset was acquired from a 3rd party source (Kaggle) and may contain inaccuracies or incomplete information."
+   ],
+   "id": "e466f9cba86208e9"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# **Step 1**\n",
+    "\n",
+    "Using Pandas, we will read in the rawdata CSV file. After reading it in, we will filter the data to include only the desired columns, ensuring we only grab the QB position and the years 2015-2024. Next, we will create new statistics to add to our cleaned-up dataset, which will then be exported as a CSV file into the cleandata folder."
+   ],
+   "id": "7fec017e45074f56"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-07T16:30:34.107586Z",
-     "start_time": "2025-09-07T16:30:32.030699Z"
+     "end_time": "2025-09-08T20:31:28.764010Z",
+     "start_time": "2025-09-08T20:31:28.498475Z"
     }
    },
    "cell_type": "code",
@@ -15,13 +35,13 @@
    ],
    "id": "fbc121e30a2defb3",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-06T21:05:26.099896Z",
-     "start_time": "2025-09-06T21:05:26.069346Z"
+     "end_time": "2025-09-08T20:31:30.532371Z",
+     "start_time": "2025-09-08T20:31:30.528113Z"
     }
    },
    "cell_type": "code",
@@ -42,43 +62,43 @@
    ],
    "id": "3fc7584d96ee77e4",
    "outputs": [],
-   "execution_count": 2
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-09-06T21:05:28.102324Z",
-     "start_time": "2025-09-06T21:05:28.087290Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "#Filter to only look at QB stats from 2020 - 2024\n",
-    "qb_data = qb_data[(qb_data[\"position\"] == \"QB\")\n",
-    "            & qb_data[\"season\"].between(2015,2024)]"
-   ],
-   "id": "5b34dd412054d072",
-   "outputs": [],
    "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-06T21:05:30.507140Z",
-     "start_time": "2025-09-06T21:05:30.500861Z"
+     "end_time": "2025-09-08T20:31:32.661257Z",
+     "start_time": "2025-09-08T20:31:32.657492Z"
     }
    },
    "cell_type": "code",
-   "source": "qb_data.fillna(0, inplace=True)",
-   "id": "44cd7055bf14db5",
+   "source": [
+    "#Filter to only look at QB stats from 2015 to 2024\n",
+    "qb_data = qb_data[(qb_data[\"position\"] == \"QB\")\n",
+    "            & qb_data[\"season\"].between(2015,2024)]"
+   ],
+   "id": "5b34dd412054d072",
    "outputs": [],
    "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-06T21:05:32.101808Z",
-     "start_time": "2025-09-06T21:05:32.072352Z"
+     "end_time": "2025-09-08T20:31:33.901905Z",
+     "start_time": "2025-09-08T20:31:33.899512Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "qb_data.fillna(0, inplace=True)",
+   "id": "44cd7055bf14db5",
+   "outputs": [],
+   "execution_count": 5
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-08T20:31:35.630671Z",
+     "start_time": "2025-09-08T20:31:35.623984Z"
     }
    },
    "cell_type": "code",
@@ -98,13 +118,13 @@
    ],
    "id": "fea6bd52dc6437ee",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-06T21:05:34.738167Z",
-     "start_time": "2025-09-06T21:05:34.691967Z"
+     "end_time": "2025-09-08T20:31:37.784479Z",
+     "start_time": "2025-09-08T20:31:37.778199Z"
     }
    },
    "cell_type": "code",
@@ -126,34 +146,34 @@
    ],
    "id": "f38ccdac9daed46b",
    "outputs": [],
-   "execution_count": 6
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-09-06T21:05:37.031644Z",
-     "start_time": "2025-09-06T21:05:36.987970Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "#Export the cleaned up dataset into an excel file for dashboard creation\n",
-    "qb_data.to_csv(\"../cleandata/cleaned_qb_stats.csv\", index=False)"
-   ],
-   "id": "bd012e07f2c2ca7a",
-   "outputs": [],
    "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-06T21:03:07.995386Z",
-     "start_time": "2025-09-06T21:03:07.976842Z"
+     "end_time": "2025-09-08T20:31:40.213949Z",
+     "start_time": "2025-09-08T20:31:40.202767Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "#Consider adding matplotlib graph here\n",
+    "#Export the cleaned up dataset into an Excel file for dashboard creation\n",
+    "qb_data.to_csv(\"../cleandata/cleaned_qb_stats.csv\", index=False)"
+   ],
+   "id": "bd012e07f2c2ca7a",
+   "outputs": [],
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-08T20:31:41.690735Z",
+     "start_time": "2025-09-08T20:31:41.685003Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "#Confirm the data types before moving to postgresql\n",
     "qb_data.dtypes"
    ],
    "id": "6ad83b7cf6ba7c29",
@@ -219,31 +239,37 @@
        "dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 8
+   "execution_count": 9
   },
   {
    "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "#ADD block here saying I am going to export the data into one excel file",
-   "id": "a4d7583120da0776"
+   "cell_type": "markdown",
+   "source": [
+    "## **STEP 2**\n",
+    "\n",
+    "After exporting the cleaned-up data into a CSV file, you will move to a SQL platform, in this case PostgreSQL. First, create a database named \"qbstats\" (if you name it something else, please update dbname accordingly). Then, use the .sql files found in the sql folder to create the tables and views in that order.\n",
+    "\n",
+    "After completing that, return to Python to export the views into a single Excel workbook, with each view as a separate worksheet. This workbook will then be used for the analysis portion of the project.\n",
+    "\n",
+    "Please make sure your dbname, username, password, host, and port matches your systems."
+   ],
+   "id": "5208951683e09eb9"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-07T16:22:05.230137Z",
-     "start_time": "2025-09-07T16:22:05.068148Z"
+     "end_time": "2025-09-08T20:50:32.912780Z",
+     "start_time": "2025-09-08T20:50:32.870877Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "#Connects to my postgresql server to create an excel file\n",
+    "#Connects to my postgresql server to create an Excel file\n",
     "import psycopg2\n",
     "\n",
     "conn = psycopg2.connect(\n",
@@ -256,13 +282,13 @@
    ],
    "id": "167f678a242b7634",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-07T16:23:33.467834Z",
-     "start_time": "2025-09-07T16:23:33.457655Z"
+     "end_time": "2025-09-08T20:50:35.182153Z",
+     "start_time": "2025-09-08T20:50:35.179840Z"
     }
    },
    "cell_type": "code",
@@ -281,30 +307,34 @@
    ],
    "id": "c5bfe4010e0a9f23",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-07T16:29:43.480368Z",
-     "start_time": "2025-09-07T16:29:43.434722Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "excel_ready_data = \"../excel_ready_data/qb_data_created.xlsx\"",
-   "id": "4ee4fb4a0b9fa65",
-   "outputs": [],
-   "execution_count": 3
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-09-07T16:37:34.074838Z",
-     "start_time": "2025-09-07T16:37:33.816985Z"
+     "end_time": "2025-09-08T20:50:37.166453Z",
+     "start_time": "2025-09-08T20:50:37.164517Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "#Name and location of the Excel Workbook\n",
+    "excel_ready_data = \"../excel_ready_data/qb_data_created.xlsx\""
+   ],
+   "id": "4ee4fb4a0b9fa65",
+   "outputs": [],
+   "execution_count": 12
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-08T20:50:57.239525Z",
+     "start_time": "2025-09-08T20:50:57.017915Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "#Might need to install openyxl for this code to work\n",
     "with pd.ExcelWriter(excel_ready_data, engine=\"openpyxl\") as writer:\n",
     "    for view in views:\n",
     "        df = pd.read_sql(f\"SELECT * FROM {view};\", conn)\n",
@@ -316,12 +346,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/qh/7bkgbx7j02bggk5pbj40zdbc0000gn/T/ipykernel_15657/253378359.py:3: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  df = pd.read_sql(f\"SELECT * FROM {view};\", conn)  # warning might show\n"
+      "C:\\Users\\Mike\\AppData\\Local\\Temp\\ipykernel_30160\\3164809761.py:3: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  df = pd.read_sql(f\"SELECT * FROM {view};\", conn)\n"
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 14
   }
  ],
  "metadata": {
